--- a/static/style.css
+++ b/static/style.css
@@ -10,13 +10,39 @@ body {
   font-size: 20px;
   color: green;
 }
-video,
-canvas {
-  display: block;
-  margin-top: 20px;
-  width: 800px;
+
+.video-box {
+  width: 700px;
   aspect-ratio: 16 / 9;
+  height: auto;
 }
+
+.video-box video {
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 16/ 9;
+}
+
 canvas {
   display: none;
+}
+
+#overlay {
+  position: absolute;
+  top: 0px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
+
+#cropBox {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 50%;
+  aspect-ratio: 16/9;
+  border: 2px dashed red;
+  box-sizing: border-box;
+  transform: translate(-50%, -50%);
 }
