--- a/templates/display_hasil.html
+++ b/templates/display_hasil.html
@@ -5,5 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hasil Deteksi</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Hasil deteksi: {{number}}</h1>
+  </body>
 </html>
