--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,7 @@
     <canvas id="canvas"></canvas>
 
     <div id="result">Detected:</div>
+    <a href="/" id="back-button" style="display: none"> -Kembali</a>
     <!-- <button id="reset-btn" onclick="resetFuction()">Ulangi</button> -->
     <!-- <h3>Cropped Preview</h3> -->
     <!-- <canvas
