--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,8 @@
     ></canvas> -->
 
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
+    <!-- Tesseract.js v5 -->
+    <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script>
     <script src="{{ url_for('static', filename='main_script.js') }}"></script>
   </body>
 </html>
