finish basic logic. To quite to be true!

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Digit OCR</title>
-    <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}" />
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <h1>Scan Digit</h1>
@@ -30,6 +30,6 @@
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
     <!-- Tesseract.js v5 -->
     <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script>
-    <script src="{{ url_for('static', filename='main_script.js') }}"></script>
+    <script src="/main_script.js"></script>
   </body>
 </html>
