add ejs remove html

--- a/templates/display_hasil.ejs
+++ b/templates/display_hasil.ejs
@@ -41,7 +41,7 @@
   <body>
     <div class="result-container">
       <h1>Hasil Deteksi:</h1>
-      <div class="detected-number">{{ number }}</div>
+      <p class="detected-number"><%= number %></p>
     </div>
   </body>
 </html>
