add camera selector

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,13 @@
 <html>
   <head>
     <title>Digit OCR</title>
+    <meta charset="UTF-8" />
     <link rel="stylesheet" href="/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <h1>Scan Digit</h1>
+    <select id="deviceSelector"></select>
     <div style="position: relative; display: inline-block" class="video-box">
       <video id="video" autoplay></video>
       <div id="cameraStatus">Loading camera...</div>
