add reload button - back button - fix timeout time

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,10 @@
     <canvas id="canvas"></canvas>
 
     <div id="result">Detected:</div>
-    <a href="/" id="back-button" style="display: none"> -Kembali</a>
+    <button onclick="window.location.reload();" class="reload-btn">
+      Reload
+    </button>
+    <!-- <a href="/" id="back-button" style="display: none"> -Kembali</a> -->
     <!-- <button id="reset-btn" onclick="resetFuction()">Ulangi</button> -->
     <!-- <h3>Cropped Preview</h3> -->
     <!-- <canvas
